--- a/README
+++ b/README
@@ -1,4 +1,8 @@
 op-losse-schroeven
 ==================
 
-the world online
+
+5 7 2 8    在 be at, in, on; consist in, rest
+7 D D A    線 thread, line, wire; clue
+4 E 1 6    世 generation; world; era
+7 5 4 C    界 boundary, limit; domain; society; the world
