--- a/README
+++ b/README
@@ -1,6 +1,12 @@
 op-losse-schroeven
 ==================
+0
 
+-------    x(4)
+
+5 7 4 D    坍 collapse; landslide
+
+-------    hex
 
 5 7 2 8    在 be at, in, on; consist in, rest
 7 D D A    線 thread, line, wire; clue
